fix: overflow

--- a/src/pages/ow/index.module.css
+++ b/src/pages/ow/index.module.css
@@ -134,6 +134,7 @@ a.square:hover {
     justify-content: center;
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
     z-index: 10;
 }
 
